[package]
name = "ruhttps"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sozu = { git = "https://github.com/o0Ignition0o/sozu", branch = "igni/https_hang" } # "0.12.0"
sozu-command-lib = { git = "https://github.com/o0Ignition0o/sozu", branch = "igni/https_hang" }  # "0.12.0"
sozu-lib = { git = "https://github.com/o0Ignition0o/sozu", branch = "igni/https_hang" }  # "0.12.0"
time = "0.3.12"